Fix note message spacing issue on application card

--- a/app/frontend/styles/_application-card.scss
+++ b/app/frontend/styles/_application-card.scss
@@ -30,6 +30,7 @@
   }
 
   &__primary {
+    padding-top: govuk-spacing(2);
     dd {
       @include govuk-font($size: 16);
     }
